Add 401 unauthorized page

--- a/public/401.html
+++ b/public/401.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Forbidden</title>
+  <title>Not authorized</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -48,10 +48,10 @@
 </head>
 
 <body>
-  <!-- This file lives in public/403.html -->
+  <!-- This file lives in public/401.html -->
   <div class="dialog">
-    <h1>Forbidden</h1>
-    <p>You are not allowed to view this page.</p>
+    <h1>Not authorized</h1>
+    <p>You are not authorized to view this page.</p>
   </div>
 </body>
 </html>
